--- a/imgSrc.qrc
+++ b/imgSrc.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/img.png</file>
+        <file>images/carGif.gif</file>
     </qresource>
 </RCC>
