feat:添加了点击车辆出库功能，实现了动画运动翻转

--- a/imgSrc.qrc
+++ b/imgSrc.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>images/img.png</file>
         <file>images/carGif.gif</file>
+        <file>images/carGif_180.gif</file>
+        <file>images/carGif_90.gif</file>
     </qresource>
 </RCC>
